--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,60 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+header {
+  height: 50px;
+  line-height: 50px;
+  background: #2d3748;
+  color: white;
+}
+
+footer {
+  height: 30px;
+  line-height: 30px;
+  background: #2d3748;
+  color: white;
+  font-size: 8pt;
   text-align: center;
 }
 
+section {
+  height: calc(100% - 100px);
+  width: calc(100% - 20px);
+  overflow: auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 20px;
+  padding: 10px;
+}
+
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+  font-size: 16pt;
+  font-weight: bold;
+  margin-left: 15px;
 }
 
 .card {
-  padding: 2em;
+  width: 100%;
+  min-height: 250px;
+  background: white;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0px 10px 20px rgb(0, 0, 0, 0.2);
+  cursor: pointer;
+  text-align: center;
+  transition: transform 0.3s ease;
 }
 
-.read-the-docs {
-  color: #888;
+.card img {
+  width: 100%;
+  height: 200px;
+  display: block;
+  cursor: pointer;
+}
+
+.card label {
+  display: block;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.card:hover {
+  transform: translateY(-8px);
 }
